# codex-dynamicflow

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.py
docs/: codex-dynamic-workflows-parity.md
examples/: smoke-real.json  workflow.yaml
scripts/: codex-dynamicflow-mcp  codex-flow-mcp
src/codex_dynamicflow/: __init__.py  cli.py  mcp_server.py  mini_yaml.py  runner.py  workflow.py
src/codex_flow/: __init__.py  cli.py  mcp_server.py  mini_yaml.py  runner.py  workflow.py
tests/: test_cli.py  test_mcp_server.py  test_workflow.py
