[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-flow"
version = "0.1.0"
description = "External workflow runner for Codex CLI: phases, worktrees, model/reasoning routing, and MCP access."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Hermes local"}]
license = {text = "MIT"}
dependencies = []

[project.scripts]
codex-flow = "codex_flow.cli:main"
codex-flow-mcp = "codex_flow.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
